plugin
	none

shared between languages
	none

SQF
	refactor->renaming functions sort of works

Header
    none