@@ -1,0 +1,7 @@
+/*
+	author: ${USER}
+	description: none
+	returns: nothing
+*/
+
+private [""];
