@@ -45,13 +45,16 @@ public class SQFVariableNamedElementMixin extends ASTWrapperPsiElement implement
 	public ItemPresentation getPresentation() {
 		if(this.myVariableElementType == SQFTypes.GLOBAL_VAR){
 			if(SQFStatic.followsSQFFunctionNameRules(this.getVarName())){
+				if(SQFStatic.isBisFunction(this.getVarName())){
+					return new SQFFunctionItemPresentation(this.getVarName(), this.getContainingFile());
+				}
 				try{
 					HeaderConfigFunction function = HeaderPsiUtil.getFunctionFromCfgFunctions(this.getContainingFile(), this.getVarName());
 					if(function != null){
-						return new SQFFunctionItemPresentation(function);
+						return new SQFFunctionItemPresentation(function.getCallableName(), function.getClassDeclaration().getContainingFile());
 					}
 				}catch (GenericConfigException e) {
-					System.out.println(e.getMessage());
+					System.out.println("SQFVariableNamedElementMixin.getPresentation: " + e.getMessage());
 				}
 			}
 		}
